--- a/.gitignore
+++ b/.gitignore
@@ -162,7 +162,7 @@ ClientBin/
 *.pfx
 *.publishsettings
 /**/node_modules/
-/**/jspm_modules/
+/**/jspm_packages/
 /**/app/**/*.js
 
 # RIA/Silverlight projects
