--- a/Angular2AspNetCoreStarter/package.json
+++ b/Angular2AspNetCoreStarter/package.json
@@ -8,15 +8,12 @@
   "author": "Ryan Langton",
   "license": "ISC",
   "jspm": {
-    "directories": {
-      "packages": "wwwroot/jspm_packages"
-    },
-    "configFile": "wwwroot/config.js",
     "dependencies": {
-      "angular2": "npm:angular2@^2.0.0-beta.1",
+      "angular2": "npm:angular2@2.0.0-beta.1",
       "angular2-polyfill": "npm:angular2-polyfill@^0.0.1",
       "es6-shim": "github:es-shims/es6-shim@^0.34.1",
-      "reflect-metadata": "npm:reflect-metadata@^0.1.3",
+      "reflect-metadata": "npm:reflect-metadata@0.1.2",
+      "rxjs": "npm:rxjs@5.0.0-beta.0",
       "zonejs": "npm:zone.js@^0.5.10"
     },
     "devDependencies": {
@@ -26,7 +23,7 @@
     }
   },
   "devDependencies": {
-    "angular2": "^2.0.0-beta.1",
+    "angular2": "2.0.0-beta.1",
     "del": "^2.2.0",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.13",
@@ -34,8 +31,8 @@
     "gulp-typescript": "~2.10.0",
     "gulp-watch": "~4.3.5",
     "jspm": "^0.16.24",
-    "reflect-metadata": "^0.1.2",
-    "rxjs": "^5.0.0-beta.0",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.0",
     "zone.js": "^0.5.10"
   }
 }
