--- a/Angular2AspNetCoreStarter/project.json
+++ b/Angular2AspNetCoreStarter/project.json
@@ -27,6 +27,6 @@
     "**.vspscc"
   ],
   "scripts": {
-    "prepublish": [ "npm install", "jspm install" ]
+    "prepublish": [ "npm install", "jspm install -y", "gulp copy-jspm", "gulp" ]
   }
 }
