--- a/Angular2AspNetCoreStarter/project.json
+++ b/Angular2AspNetCoreStarter/project.json
@@ -20,7 +20,8 @@
 
   "exclude": [
     "wwwroot",
-    "node_modules"
+    "node_modules",
+    "jspm_packages"
   ],
   "publishExclude": [
     "**.user",
