--- a/Angular2AspNetCoreStarter/project.json
+++ b/Angular2AspNetCoreStarter/project.json
@@ -28,6 +28,6 @@
     "**.vspscc"
   ],
   "scripts": {
-    "prepublish": [ "npm install", "jspm install -y", "gulp copy-jspm", "gulp" ]
+    "prepublish": [ ]
   }
 }
