--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dnx": "dnvm use default -p",
     "tsc": "tsc --watch",
     "watch": "gulp watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "publish": "powershell '.\\Angular2AspNetCoreStarter\\Properties\\PublishProfiles\\angular2starter - Web Deploy-publish.ps1'"
   },
   "jspm": {
     "dependencies": {
