fixes to angular2 upgrade

--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   },
   "jspm": {
     "dependencies": {
-      "angular2": "npm:angular2@2.0.0-beta.6",
+      "angular2": "npm:angular2@^2.0.0-beta.6",
       "angular2-polyfill": "npm:angular2-polyfill@^0.0.1",
       "es6-shim": "github:es-shims/es6-shim@^0.34.1",
       "reflect-metadata": "npm:reflect-metadata@0.1.2",
       "rxjs": "npm:rxjs@5.0.0-beta.0",
+      "typescript": "npm:typescript@^1.7.5",
       "zonejs": "npm:zone.js@^0.5.14"
     },
     "devDependencies": {
